# pywinselect

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
pywinselect/: __init__.py  _core.py
