[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywinselect"
version = "0.2.0"
description = "Get selected files and folders in Windows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Beltrán Offerrall"}
]
keywords = ["windows", "selection", "files", "automation", "streamdeck"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pywin32",
]

[project.urls]
Homepage = "https://github.com/offerrall/pywinselect"
Repository = "https://github.com/offerrall/pywinselect"
Issues = "https://github.com/offerrall/pywinselect/issues"